--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -3,12 +3,13 @@ requires = ["setuptools>=78.1.0"]
 build-backend = "setuptools.build_meta"
 [project]
 name = "filmsapisdk"
-version = "0.0.1"
+version = "0.0.2"
 
 authors = [
 { name="[Gouesse GO]" },
 ]
 description = "SDK python pour acceder MovieLens API (Data Analysts/Data scientists friendly)"
+readme = "README.md"
 requires-python = ">=3.12"
 classifiers = [
 "Development Status :: 3 - Alpha",
